IALERT-4064: Verify and remove duplicate notifications if they exist in the same batch